WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: tabbed windows (hey, just use screen...)
WISH: just for fun, do shade and tint with XRender.

5.2
	- new option -pty-fd that makes the terminal a slave
          that uses an existing pty for I/O instead of starting
          a command.
        - implement enough of XEMBED to allow for correct focus.
        - fix assertioan failure ("crash") on mousewheel-scrolling
          when the terminal height is small, by removing the assert.
          (reported by Mikael Magnusson).
        - SYNCCVS. backported bugfixes done to rxvt
          (sourceforge bugs #1028739, #1028732), except for
          pts/%s fix as it seems to collide with freebsd,
          and sourceforge bug #954654, which is not neccessary.
        - change terminfo file to not clobber G1 when using
          line-drawing characters, as this seems to mess
          with EUC-JP (it will clobber G0, but G0 practically
          needs to be US-ASCII all the time).
        - toggle default application keypad/cursor mode to help
          some apps who fail to set the correct mode.
        - check for WM_PROTOCOLS type in ClientMessage as to
          not destroy the window for other types of messages.
	- remove shared library (or any library) support - it is
          of no use currently (and -embed is a better way to embed
          rxvt-unicode).
        - get rid of the intpro files.

5.1  Tue Feb 15 17:13:27 CET 2005
	- fix a bug when parsing fontnames and another one
          for empty keymaps which could result in crashes
          (Kuang-che Wu).
        - new option: -embed (frills). somebody could write a simple
          tk script to make a tab'able terminal now...
        - only warn on X errors and _try_ to continue (frills).
        - add COPYING back, which got lost somehow.
        - after deciding that LSM is dead, remove all traces of it,
          along with other, similar, cleanups.