@@ -11,6 +11,8 @@ reconf
 genac
 
 doc/embed
+doc/embed-tk
+doc/rxvt-tabbed
 doc/pty-fd
 doc/etc/rxvt-unicode.terminfo
 doc/etc/rxvt-unicode.termcap
