@@ -17,6 +17,9 @@ WISH: just for fun, do shade and tint with XRender.
           that uses an existing pty for I/O instead of starting
           a command.
         - implement enough of XEMBED to allow for correct focus.
+        - added doc/embed-tk, an embedding example in Perl/Tk,
+          and doc/rxvt-tabbed, a primitive tabbed shell implemented
+          in Perl/Gtk2.
         - fix assertioan failure ("crash") on mousewheel-scrolling
           when the terminal height is small, by removing the assert.
           (reported by Mikael Magnusson).
